FEito javascript e adicionado script de tabela

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
         <div>
             <div>
                 <div>
-                    <button id="mirer" onclick="tabela()">
+                    <button id="Mirer">
                         Mirer
                     </button>
                 </div>
                 <div>
-                    <button id="nathan" onclick="ttabela()">
+                    <button id="Nathan">
                         Nathan
                     </button>
                 </div>
                 <div>
-                    <button id="tori"onclick="tabela()">
+                    <button id="Tori">
                         Tori
                    </button>
                 </div>
