correção da rota dos botões

--- a/index.html
+++ b/index.html
@@ -1,31 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width-device-width, initial-scale=1.0">
-        <title>Tabela de Punição</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width-device-width, initial-scale=1.0" />
+    <title>Tabela de Punição</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div>
+      <div>
         <div>
-            <div>
-                <div>
-                    <button id="Mirer">
-                        Mirer
-                    </button>
-                </div>
-                <div>
-                    <button id="Nathan">
-                        Nathan
-                    </button>
-                </div>
-                <div>
-                    <button id="Tori">
-                        Tori
-                   </button>
-                </div>
-            </div>
+          <button id="Mirer">Mirer</button>
         </div>
-        <script src="script.js"></script>
-    </body>
+        <div>
+          <button id="Nathan">Nathan</button>
+        </div>
+        <div>
+          <button id="Tori">Tori</button>
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
