feito alteração para tabela apresentar nome do meliante

--- a/tabela.html
+++ b/tabela.html
@@ -17,10 +17,11 @@
         </div>
       </div>
       <div>
-        <div>
+        <div >
           <div>
             <h2 id="nameUser"></h2>
           </div>
+          <div class="organize-div">
           <table>
             <thead>
               <tr>
@@ -33,6 +34,7 @@
               <td></td>
             </tbody>
           </table>
+          </div>
           <div>
             <div>Total</div>
             <div></div>
