feita alterações para aproximar do modelo do figma

--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width-device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tabela de Punição</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div>
-      <div>
+      <div class="menu">
+        <div>
+          <h3>Selecione o nome do meliante</h3>
+        </div>
         <div>
           <button id="Mirer">Mirer</button>
         </div>
